css: Ensure chatbox user bubble doesn't cover scrollbar

--- a/data/theme/gnome-shell.css
+++ b/data/theme/gnome-shell.css
@@ -1691,7 +1691,7 @@ StScrollBar StButton#vhandle:active {
 
 .chatbox-user-bubble-offset {
     padding-left: 60px;
-    padding-right: 10px;
+    padding-right: 15px;
     padding-top: 10px;
 }
 
